# hipscatalog_gen

./: .gitattributes  .pre-commit-config.yaml  README.md  index.json  info.json  pyproject.toml  regressions.xml  run_hips.sbatch
.github/ISSUE_TEMPLATE/: 1-bug_report.md  README.md
.github/workflows/: README.md  asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 091c806f-virtualenv-py3.11-Cython-build-packaging.json  0f715d1b-virtualenv-py3.11-Cython-build-packaging.json  37071219-virtualenv-py3.11-Cython-build-packaging.json  38fdf241-virtualenv-py3.11-Cython-build-packaging.json  4d84fcac-virtualenv-py3.11-Cython-build-packaging.json  4eb99a81-virtualenv-py3.11-Cython-build-packaging.json  5edc35a5-virtualenv-py3.11-Cython-build-packaging.json  61d0fd41-virtualenv-py3.11-Cython-build-packaging.json  62d0db30-virtualenv-py3.11-Cython-build-packaging.json  759d1679-virtualenv-py3.11-Cython-build-packaging.json  80830348-virtualenv-py3.11-Cython-build-packaging.json  98fb8edd-virtualenv-py3.11-Cython-build-packaging.json  c8a7cc16-virtualenv-py3.11-Cython-build-packaging.json  f923df73-virtualenv-py3.11-Cython-build-packaging.json  faf84750-virtualenv-py3.11-Cython-build-packaging.json
benchmarks/: README.md  asv.conf.json  benchmarks.py
configs/: config_des.yaml  config_dp1.yaml  config_test.yaml
docs/: conf.py  index.rst
docs/notebooks/: README.md
examples/configs/: config.template.yaml  config_des.yaml
examples/data/des_dr2_small_sample/: des_dr2_spatial_cone_ra38.200_dec-36.000_r1.000_part1.parquet  des_dr2_spatial_cone_ra38.200_dec-36.000_r1.000_part3.parquet  des_dr2_spatial_cone_ra38.200_dec-36.000_r1.000_part5.parquet  des_dr2_spatial_cone_ra38.200_dec-36.000_r1.000_part6.parquet
examples/data/des_dr2_small_sample_collection/: collection.properties
examples/data/des_dr2_small_sample_collection/catalog/: hats.properties  (+1 more)
examples/notebooks/: simple-fits-inspection.ipynb  simple-pipeline-run.ipynb
graphs/summary/: benchmarks.mem_list.json  benchmarks.time_computation.json
hipscatalog_gen/: io_output.py  pipeline.py
src/hipscatalog_gen/: __init__.py  cli.py  cluster.py  config.py  healpix.py  io_input.py  io_output.py  mag_global.py  pipeline.py  selection.py  utils.py
tests/hipscatalog_gen/: test_example_module.py  test_packaging.py
(+2 files in other folders)
