[project]
name = "hipscatalog-gen"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Luigi Lucas de Carvalho Silva", email = "luigi.silva@linea.org.br" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"

# ==== RUNTIME (apenas o que seus módulos importam) ====
dependencies = [
  "numpy>=2.0,<3.0",
  "pandas>=2.1,<3.0",
  "pyarrow>=14,<23",
  "dask>=2024.8.0,<2026.0",
  "dask-jobqueue>=0.8,<1.0",
  "distributed>=2024.8.0,<2026.0",
  "astropy>=6,<8",
  "healpy>=1.17,<2.0",
  "mocpy>=0.12,<1.0",
  "hats>=0.6,<1.0",
  "lsdb>=0.6,<1.0",
  "pyyaml>=6,<7",
  "scipy>=1.13",
]

[project.scripts]
hipscatalog-gen = "hipscatalog_gen.cli:main"

[project.urls]
"Source Code" = "https://github.com/linea-it/hipscatalog-gen"

# ==== EXTRAS (infra opcional) ====
[project.optional-dependencies]
slurm = [
  "dask-jobqueue>=0.8,<1.0",
]
s3 = [
  "s3fs>=2024.6,<2026.0",
]
dev = [
  "asv[virtualenv]==0.6.5",
  "jupyter",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]
docs = [
  "sphinx>=7.2,<9",
  "sphinx-rtd-theme>=2.0,<4",
  "myst-parser>=2.0,<5",
  "sphinx-autodoc-typehints>=2.0,<3",
]

[build-system]
requires = ["setuptools>=62", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/hipscatalog_gen/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests", "src", "docs"]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E","W","F","N","UP","B","SIM","I","D101","D102","D103","D106","D206","D207","D208","D300","D417","D419","NPY201"]
ignore = [
  "UP006","UP007","SIM114","B028","SIM117","UP015","UP028",
  "UP035",
  "N806"
]

[tool.ruff.lint.per-file-ignores]
"src/hipscatalog_gen/cluster.py" = ["SIM105"]
"src/hipscatalog_gen/io_input.py" = ["SIM108"]
"src/hipscatalog_gen/pipeline.py" = ["SIM105","SIM108","F841"]
"src/hipscatalog_gen/selection.py" = ["SIM102","SIM108"]

[tool.setuptools.package-data]
hipscatalog_gen = ["py.typed"]

[tool.coverage.run]
omit = ["src/hipscatalog_gen/_version.py"]
